--- a/src/App.module.css
+++ b/src/App.module.css
@@ -8,3 +8,11 @@ body {
     justify-content: center;
     flex-direction: column;
 }
+
+@media (max-width: 770px) {
+    .container {
+        padding: 10px;
+        width: 100%;
+        margin-left: 0;
+    }
+}
